--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,8 @@ ENV/
 # mypy
 .mypy_cache/
 
+*.pyc
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
