--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   },
   "license": "MIT",
   "scripts": {
-    "postinstall": "bower install"
+    "postinstall": "node node_modules/bower/bin/bower install"
+  },
+  "dependencies": {
+    "bower": "^1.8.0"
   }
 }
