--- a/.gitignore
+++ b/.gitignore
@@ -147,10 +147,6 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 .idea/
-**/node_modules/
-**/yarn.lock
-**/.package.json.swp
-package-lock.json
 ### macOS template
 *.DS_Store
 .DS_Store
@@ -180,4 +176,9 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-**/app/static/dist/*
+# WEB
+**/web/dist/*
+**/node_modules/*
+**/yarn.lock
+**/.package.json.swp
+**/package-lock.json
