--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,10 @@ blueprint==3.4.2
 click==6.7
 fields==5.0.0
 Flask==0.12.2
-Flask-MongoAlchemy==0.7.2
+Flask-PyMongo==0.5.1
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
-MongoAlchemy==0.21
 pymongo==3.4.0
 pytz==2017.2
 six==1.10.0
