--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.1",
     "vue": "^2.3.3",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.6.0"
   },
   "devDependencies": {
