--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "description": "Godinez web project",
   "authors": [
     "Emerson Mendes <emerson.emendes@gmail.com>",
-    "Laisson Silveira <email>"
+    "Laisson Silveira <laisson.r.silveira@gmail.com>"
   ],
   "private": true,
   "scripts": {
@@ -14,7 +14,8 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "postinstall": "pip install -r ../requirements.txt"
   },
   "dependencies": {
     "jquery": "^3.2.1",
